@@ -1,3 +1,5 @@
+- make html_select_date work consistently with 0000-00-00 00:00:00 and
+  0000-00-00 inputs (cybot, boots)
 - fix wrong handling of insert's name attribute. (messju)
 - fix false replacement of "$t" inside double quotes (checat, messju)
 - added support for column headings and caption element to html_table and
